# solid-octo-waffle

./: .gitignore  README.md
config/: core-site.xml  hdfs-site.xml
data_for_jobs/: novels.txt  poems.txt  reviews.txt
dockers/: Dockerfile.base  Dockerfile.master  Dockerfile.worker  docker-compose.yaml  master_run.sh  worker_run.sh
scripts/: books.py  books_debug.py  books_persist.py  books_with_hdfs.py  books_without_parts.py  different_image_compressions.py  pure_python_for_books.py
slicer/: CMakeLists.txt  README.md  assignment.cpp  assignment.hpp  client.cpp  client.hpp  common.cpp  common.hpp  main  main.cpp  router.cpp  router.hpp  task.cpp  task.hpp
slicer/AssignmersPolicies/: article.cpp  article.hpp  blocks.cpp  blocks.hpp  fill.cpp  petrenko.cpp  petrenko.hpp  top  top_secret.cpp
slicer/comparing/: Makefile  article_output  graphics.IPYNB  petrenko_output
